@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/16/2018
+  * added decAttOnFailedES
+
 * 10/5/2018
   * added discardEvents in retryTask
 
